--- a/SwashbucklerDiary/Components/PageComponents/BackupsWebDAV.razor
+++ b/SwashbucklerDiary/Components/PageComponents/BackupsWebDAV.razor
@@ -1,7 +1,8 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits BackupsPageComponentBase
 
-<MCard Elevation="2"
+<MCard Class="elevation-sm-2"
+       Elevation="0"
        Rounded="@("lg")">
     <MList>
         <MListItem OnClick="()=>ShowConfig=true">
