--- a/SwashbucklerDiary/Pages/AchievementPage.razor
+++ b/SwashbucklerDiary/Pages/AchievementPage.razor
@@ -9,8 +9,8 @@
     <div class="d-flex justify-space-between flex-wrap">
         @foreach (var item in Achievements)
         {
-            <MCard Elevation="2"
-               Class="my-5 achievement-card"
+            <MCard Elevation="0"
+               Class="my-5 achievement-card elevation-sm-2"
                Rounded="@("lg")"
                Ripple="false">
                 <MList>
