--- a/SwashbucklerDiary/Pages/HistoryPage.razor
+++ b/SwashbucklerDiary/Pages/HistoryPage.razor
@@ -22,7 +22,7 @@
 <SwiperTabItems @bind-Value="tab">
     <SwiperTabItem>
         <MDatePicker @bind-Value="PickedDate"
-                     Class="rounded-lg my-picker mb-5"
+                     Class="rounded-xl my-picker mb-5"
                      TValue="DateOnly"
                      ShowCurrent="false"
                      FullWidth="true"
