--- a/SwashbucklerDiary/Pages/PermissionPage.razor
+++ b/SwashbucklerDiary/Pages/PermissionPage.razor
@@ -5,7 +5,8 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Elevation="2"
+    <MCard Class="elevation-sm-2"
+           Elevation="0"
            Rounded="@("lg")">
         <MList>
             <MListItem OnClick="OpenSystemPermissionSetting">
