--- a/SwashbucklerDiary/Pages/SettingPage.razor
+++ b/SwashbucklerDiary/Pages/SettingPage.razor
@@ -9,8 +9,8 @@
         @(I18n.T("Setting.Diary.Name"))
     </div>
 
-    <MCard Class="setting-card"
-           Elevation="2"
+    <MCard Class="setting-card elevation-sm-2"
+           Elevation="0"
            Rounded="@("lg")">
         <MList>
             <MListItem>
@@ -79,8 +79,8 @@
         @(I18n.T("Setting.Safe.Name"))
     </div>
 
-    <MCard Class="setting-card"
-           Elevation="2"
+    <MCard Class="setting-card elevation-sm-2"
+           Elevation="0"
            Rounded="@("lg")">
         <MList>
             <MListItem OnClick="@(()=>To("/permission"))">
@@ -166,8 +166,8 @@
         @(I18n.T("Setting.Display.Name"))
     </div>
 
-    <MCard Class="setting-card"
-           Elevation="2"
+    <MCard Class="setting-card elevation-sm-2"
+           Elevation="0"
            Rounded="@("lg")">
         <MList>
             <MListItem>
