--- a/SwashbucklerDiary/wwwroot/css/extend/vditor-extend.css
+++ b/SwashbucklerDiary/wwwroot/css/extend/vditor-extend.css
@@ -4,7 +4,7 @@
 }
 
 /*软键盘遮挡问题*/
-@media (hover: none) {
+@media screen and (max-width:600px) {
     .vditor-toolbar-help {
         margin-bottom: 70px;
     }
@@ -12,7 +12,7 @@
 
 /*改变配色*/
 .theme--light .vditor-toolbar {
-    background: #fcfcfc !important;
+    background: #f7f8f9 !important;
 }
 
 .theme--dark .vditor-toolbar {
@@ -24,7 +24,7 @@
 }
 
 .theme--light .vditor-reset {
-    background-color: #fcfcfc !important;
+    background-color: #f7f8f9 !important;
 }
 
 .theme--dark .vditor-reset {
