💄 style: update a little styles

--- a/SwashbucklerDiary/Components/MyComponents/DiaryCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCard.razor
@@ -40,7 +40,7 @@
                 <MListItemTitle Class="my-diary-card-title">
                     @Title
                 </MListItemTitle>
-                <MListItemSubtitle Class="text--disabled">
+                <MListItemSubtitle>
                     @Text
                 </MListItemSubtitle>
             </MListItemContent>
