--- a/SwashbucklerDiary/Pages/LocationPage.razor
+++ b/SwashbucklerDiary/Pages/LocationPage.razor
@@ -36,9 +36,7 @@
 </ScrollContainer>
 
 <FabTransition>
-    <MButton Color="black"
-             Class="mb-15 mb-sm-0"
-             Dark
+    <MButton Class="my-btn-fab elevation-2"
              Bottom
              Right
              Fixed
