--- a/SwashbucklerDiary/wwwroot/css/app.css
+++ b/SwashbucklerDiary/wwwroot/css/app.css
@@ -140,7 +140,8 @@ a, .btn-link {
 }
 
 .theme--light.list-item-icon.m-icon {
-    color: #000000 !important;
+    /*color: #000000 !important;*/
+    color: rgba(0,0,0,.87) !important;
 }
 
 .m-main__wrap {
@@ -199,7 +200,7 @@ a, .btn-link {
 
 .my-diary-card-title {
     /*font-weight: 700 !important;*/
-    /*padding-bottom: 8px !important;*/
+    padding-bottom: 8px !important;
     /*font-size:1.1rem !important;*/
 }
 
