--- a/SwashbucklerDiary/MainPage.xaml
+++ b/SwashbucklerDiary/MainPage.xaml
@@ -6,7 +6,7 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
     <ContentPage.Behaviors>
-        <toolkit:StatusBarBehavior StatusBarColor="White" StatusBarStyle="LightContent" />
+        <toolkit:StatusBarBehavior StatusBarColor="#f7f8f9" StatusBarStyle="LightContent" />
     </ContentPage.Behaviors>
     <BlazorWebView x:Name="_blazorWebView"
                    HostPage="wwwroot/index.html">
