--- a/SwashbucklerDiary/Components/MyComponents/TagCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/TagCard.razor
@@ -3,7 +3,7 @@
 
 <MHover>
     <MCard @attributes="context.Attrs"
-           Class="@($"mb-5 my-tag-card elevation-sm-{(context.Hover?"4":"2")}")"
+           Class="@($"mb-5 my-tag-card {(context.Hover?"elevation-sm-2":"")}")"
            Elevation="0"
            Ripple="false"
            Rounded="@("lg")"
