--- a/SwashbucklerDiary/Components/PageComponents/BackupsWebDAV.razor
+++ b/SwashbucklerDiary/Components/PageComponents/BackupsWebDAV.razor
@@ -1,8 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits BackupsPageComponentBase
 
-<MCard Class="elevation-sm-2"
-       Elevation="0"
+<MCard Elevation="0"
        Rounded="@("lg")">
     <MList>
         <MListItem OnClick="()=>ShowConfig=true">
@@ -29,7 +28,7 @@
             </MListItemAction>
         </MListItem>
 
-        <MDivider Class="mx-3 mx-sm-0"></MDivider>
+        <MDivider Class="mx-3"></MDivider>
 
         <MListItem OnClick="OpenUploadDialog">
             <MListItemIcon>
@@ -50,7 +49,7 @@
             </MListItemAction>
         </MListItem>
 
-        <MDivider Class="mx-3 mx-sm-0"></MDivider>
+        <MDivider Class="mx-3"></MDivider>
 
         <MListItem OnClick="OpenDownloadDialog">
             <MListItemIcon>
