--- a/SwashbucklerDiary/Pages/LocationPage.razor
+++ b/SwashbucklerDiary/Pages/LocationPage.razor
@@ -18,7 +18,7 @@
                     </LocationListItem>
                     if (Locations.Last() != item)
                     {
-                        <MDivider Class="mx-3 mx-sm-0"></MDivider>
+                        <MDivider Class="mx-3"></MDivider>
                     }
                 }
             </MList>
