--- a/SwashbucklerDiary/Pages/UserPage.razor
+++ b/SwashbucklerDiary/Pages/UserPage.razor
@@ -5,8 +5,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="elevation-sm-2"
-           Elevation="0"
+    <MCard Elevation="0"
            Rounded="@("lg")">
         <MList>
             <MListItem OnClick="()=>ShowAvatar=true">
@@ -36,7 +35,7 @@
                 </MListItemAction>
             </MListItem>
 
-            <MDivider Class="mx-3 mx-sm-0"></MDivider>
+            <MDivider Class="mx-3"></MDivider>
 
             <MListItem OnClick="()=>ShowUserName=true">
                 <MListItemIcon>
@@ -60,7 +59,7 @@
                 </MListItemAction>
             </MListItem>
 
-            <MDivider Class="mx-3 mx-sm-0"></MDivider>
+            <MDivider Class="mx-3"></MDivider>
 
             <MListItem OnClick="()=>ShowSign = true">
                 <MListItemIcon>
