--- a/SwashbucklerDiary/Components/PageComponents/BackupsLocal.razor
+++ b/SwashbucklerDiary/Components/PageComponents/BackupsLocal.razor
@@ -1,8 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits BackupsPageComponentBase
 
-<MCard Class="elevation-sm-2"
-       Elevation="0"
+<MCard Elevation="0"
        Rounded="@("lg")">
     <MList>
         <MListItem OnClick="()=>ShowBackups=true">
@@ -24,7 +23,7 @@
             </MListItemAction>
         </MListItem>
 
-        <MDivider Class="mx-3 mx-sm-0"></MDivider>
+        <MDivider Class="mx-3"></MDivider>
 
         <MListItem OnClick="Restore">
             <MListItemIcon>
