--- a/SwashbucklerDiary/Pages/ExportPage.razor
+++ b/SwashbucklerDiary/Pages/ExportPage.razor
@@ -6,8 +6,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="elevation-sm-2"
-           Elevation="0"
+    <MCard Elevation="0"
            Rounded="@("lg")">
         <MList>
             <MListItem OnClick="Export">
@@ -29,7 +28,7 @@
                 </MListItemAction>
             </MListItem>
 
-            <MDivider Class="mx-3 mx-sm-0"></MDivider>
+            <MDivider Class="mx-3"></MDivider>
 
             <MListItem OnClick="Import">
                 <MListItemIcon>
