--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -15,7 +15,7 @@
     <div class="d-sm-flex flex-sm-row justify-space-between">
         <MHover>
             <MCard @attributes="context.Attrs"
-                   Class="@($"mine-info mb-5 py-md-3 elevation-sm-{(context.Hover?"4":"2")}")"
+                   Class="@($"mine-info mb-5 py-md-3 {(context.Hover?"elevation-sm-2":"")}")"
                    Elevation="0"
                    Rounded="@("lg")"
                    Ripple="false"
@@ -49,7 +49,7 @@
             </MCard>
         </MHover>
 
-        <MCard Class="mine-info mb-5 ml-sm-5 d-flex elevation-sm-2"
+        <MCard Class="mine-info mb-5 ml-sm-5 d-flex"
                Elevation="0"
                Rounded="@("lg")">
             <MList Class="d-flex flex-grow-1">
@@ -91,7 +91,7 @@
             @(I18n.T(list.Key))
         </div>
 
-        <MCard Class="mine-card elevation-sm-2"
+        <MCard Class="mine-card"
            Elevation="0"
            Rounded="@("lg")">
             <MList>
@@ -113,7 +113,7 @@
 
                     if (list.Value.Last() != item)
                     {
-                        <MDivider Class="mx-3 mx-sm-0"></MDivider>
+                        <MDivider Class="mx-3"></MDivider>
                     }
                 }
 
