--- a/SwashbucklerDiary/Pages/PermissionPage.razor
+++ b/SwashbucklerDiary/Pages/PermissionPage.razor
@@ -5,8 +5,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="elevation-sm-2"
-           Elevation="0"
+    <MCard Elevation="0"
            Rounded="@("lg")">
         <MList>
             <MListItem OnClick="OpenSystemPermissionSetting">
@@ -31,7 +30,7 @@
                 </MListItemAction>
             </MListItem>
 
-            <MDivider Class="mx-3 mx-sm-0"></MDivider>
+            <MDivider Class="mx-3"></MDivider>
 
             <MListItem OnClick="OpenSystemPermissionSetting">
                 <MListItemIcon>
