--- a/SwashbucklerDiary/Pages/RelatedOSPPage.razor
+++ b/SwashbucklerDiary/Pages/RelatedOSPPage.razor
@@ -7,7 +7,7 @@
 <ScrollContainer>
     @foreach (var item in OSPs)
     {
-        <MCard Class="mb-5 elevation-sm-2"
+        <MCard Class="mb-5"
            Elevation="0"
            Rounded="@("lg")"
            OnClick="()=>OpenBrowser(item.Url)">
