--- a/SwashbucklerDiary/wwwroot/css/extend/masa-blazor-extend.css
+++ b/SwashbucklerDiary/wwwroot/css/extend/masa-blazor-extend.css
@@ -97,13 +97,13 @@
     color: #fff !important;
 }
 
-.theme--light .my-picker .m-picker__body {
+/*.theme--light .my-picker .m-picker__body {
     background: #f7f8f9 !important;
 }
 
     .theme--light .my-picker .m-picker__body + .m-picker__actions {
         background: #f7f8f9 !important;
-    }
+    }*/
 
 .theme--dark .my-picker .m-picker__body {
     background: #1e1e1e !important;
@@ -160,8 +160,5 @@
 @media screen and (min-width:600px) {
     .m-application .elevation-sm-2 {
         box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12) !important
-    }
-    .m-application .elevation-sm-4 {
-        box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12) !important
     }
 }
