--- a/SwashbucklerDiary/Components/MyComponents/DiaryCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCard.razor
@@ -4,7 +4,7 @@
 <MHover>
     <MCard @attributes="context.Attrs"
            Class="@($"my-diary-card {(context.Hover?"elevation-sm-2":"")} {Class}")"
-           OnClick="OnClick"
+           OnClick="()=>OnClick.InvokeAsync(Value)"
            Elevation="0"
            Ripple="false"
            Rounded="@("lg")"
