--- a/SwashbucklerDiary/wwwroot/css/extend/vditor-extend.css
+++ b/SwashbucklerDiary/wwwroot/css/extend/vditor-extend.css
@@ -1,11 +1,8 @@
 ﻿/*隐藏输入处的提示*/
-.vditor-panel {
+/*.vditor-panel {
     display: none !important;
-}
+}*/
 
-.vditor-toolbar__item .vditor-panel {
-    display: block !important;
-}
 /*软键盘遮挡问题*/
 @media screen and (max-width:600px) {
     .vditor-toolbar-help {
