--- a/SwashbucklerDiary/Components/MyComponents/LocationListItem.razor
+++ b/SwashbucklerDiary/Components/MyComponents/LocationListItem.razor
@@ -13,10 +13,10 @@
         </MListItemTitle>
     </MListItemContent>
     <MListItemAction>
-        <MyMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
+        <MultiMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
             <ButtonContent>
                 <MIcon>mdi-pencil</MIcon>
             </ButtonContent>
-        </MyMenu>
+        </MultiMenu>
     </MListItemAction>
 </MListItem>
