--- a/SwashbucklerDiary/Components/MyComponents/TagCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/TagCard.razor
@@ -22,11 +22,11 @@
 
             <MListItemAction>
                 <div @onclick:stopPropagation="true">
-                    <MyMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
+                    <MultiMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
                         <ButtonContent>
                             <MIcon>mdi-pencil</MIcon>
                         </ButtonContent>
-                    </MyMenu>
+                    </MultiMenu>
                 </div>
             </MListItemAction>
         </MListItem>
