--- a/SwashbucklerDiary/Pages/ReadPage.razor
+++ b/SwashbucklerDiary/Pages/ReadPage.razor
@@ -28,7 +28,7 @@
         </MIcon>
     </MButton>
 
-    <MyMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
+    <MultiMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
         <ButtonContent>
             <MultiDisplay>
                 <DesktopContent>
@@ -39,7 +39,7 @@
                 </MobileContent>
             </MultiDisplay>
         </ButtonContent>
-    </MyMenu>
+    </MultiMenu>
 </MAppBar>
 
 <ScrollContainer>
