--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -19,7 +19,7 @@
             </MIcon>
         </MButton>
 
-        <MyMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
+        <MultiMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
             <ButtonContent>
                 <MultiDisplay>
                     <DesktopContent>
@@ -30,7 +30,7 @@
                     </MobileContent>
                 </MultiDisplay>
             </ButtonContent>
-        </MyMenu>
+        </MultiMenu>
     </ChildContent>
 </MAppBar>
 
