--- a/SwashbucklerDiary/wwwroot/css/extend/masa-blazor-extend.css
+++ b/SwashbucklerDiary/wwwroot/css/extend/masa-blazor-extend.css
@@ -145,7 +145,7 @@
 
 /*自适应圆角*/
 @media screen and (min-width:600px) {
-    .m-application .rounded-sm-b-lg {
+    .m-application .rounded-b-sm-lg {
         border-bottom-left-radius: 8px !important;
         border-bottom-right-radius: 8px !important;
     }
@@ -162,3 +162,4 @@
         box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12) !important
     }
 }
+
