--- a/SwashbucklerDiary/Pages/HistoryPage.razor
+++ b/SwashbucklerDiary/Pages/HistoryPage.razor
@@ -5,68 +5,27 @@
 
 <MAppBar App="true"
          Elevation="0">
-    <MTabs @bind-Value="tab"
-           ActiveClass="text-h6 font-weight-bold"
-           HideSlider>
-        <MTab Class="my-tab"
-              Ripple="false">
-            @(I18n.T("History.Calendar"))
-        </MTab>
-        <MTab Class="my-tab"
-              Ripple="false">
-            @(I18n.T("History.Catalogue"))
-        </MTab>
-    </MTabs>
+    <MToolbarTitle Class="font-weight-bold">
+        @(I18n.T("History.Calendar"))
+    </MToolbarTitle>
 </MAppBar>
 
-<SwiperTabItems @bind-Value="tab">
-    <SwiperTabItem>
-        <MDatePicker @bind-Value="PickedDate"
-                     Class="rounded-lg my-picker mb-5 pt-4"
-                     TValue="DateOnly"
-                     ShowCurrent="false"
-                     FullWidth="true"
-                     NoTitle="true"
-                     Color="primary"
-                     AllowedDates="AllowedDates"
-                     Events="AllowedDates"
-                     EventColor='"primary"'
-                     Locale="@(I18n.Culture.Name)">
-        </MDatePicker>
-        <DiaryCardList Value="CalendarDiaries"
-                       @bind-Tags="Tags"
-                       OnDeleted="Update">
-        </DiaryCardList>
-    </SwiperTabItem>
-
-    <SwiperTabItem>
-        <div class="d-sm-flex tree-wrap">
-            @if (Diaries.Any())
-            {
-                <div class="pr-sm-5">
-                    <MTreeview @bind-Active="_active"
-                           TItem="Tree"
-                           TKey="int"
-                           Items="Trees"
-                           ItemText="r=>r.Name"
-                           ItemChildren="r=>r.Children"
-                           ItemKey="r=>r.Id"
-                           Activatable="true"
-                           OpenOnClick="true"
-                           Rounded="true"
-                           ExpandIcon="mdi-chevron-down">
-                    </MTreeview>
-                </div>
-            }
-            <div>
-                <DiaryCardList Value="TreeDiaries"
-                               @bind-Tags="Tags"
-                               Class="flex-md-column"
-                               CardClass="tree-card"
-                               OnDeleted="Update">
-                </DiaryCardList>
-            </div>
-        </div>
-    </SwiperTabItem>
-</SwiperTabItems>
+<ScrollContainer>
+    <MDatePicker @bind-Value="PickedDate"
+                 Class="rounded-lg my-picker mb-5 pt-4"
+                 TValue="DateOnly"
+                 ShowCurrent="false"
+                 FullWidth="true"
+                 NoTitle="true"
+                 Color="primary"
+                 AllowedDates="AllowedDates"
+                 Events="AllowedDates"
+                 EventColor='"primary"'
+                 Locale="@(I18n.Culture.Name)">
+    </MDatePicker>
+    <DiaryCardList Value="CalendarDiaries"
+                   @bind-Tags="Tags"
+                   OnDeleted="Update">
+    </DiaryCardList>
+</ScrollContainer>
 
